# cognitive_app

./: README.md  angular.json  package-lock.json  package.json
api/: .pre-commit-config.yaml  README.md  pyproject.toml
api/cognitive_api/: __init__.py  __main__.py  conftest.py  settings.py
api/cognitive_api/db/: base.py  utils.py
api/cognitive_api/db/models/: __init__.py
api/cognitive_api/services/: __init__.py  ollama.py
api/cognitive_api/services/requests/: __init__.py
api/cognitive_api/tests/: __init__.py
api/cognitive_api/web/: __init__.py  application.py  lifetime.py
api/cognitive_api/web/api/: __init__.py  router.py
api/cognitive_api/web/api/llm/: __init__.py  views.py
api/cognitive_api/web/api/monitoring/: __init__.py
api/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
src/: index.html  styles.scss
src/app/: app.component.html  app.component.ts
src/app/message-input/: message-input.component.html  message-input.component.scss  message-input.component.ts
src/app/sidebar/: sidebar.component.ts
src/app/top-bar/: top-bar.component.html  top-bar.component.scss  top-bar.component.ts
ui/: README.md  angular.json  package.json
ui/src/: index.html  styles.scss
ui/src/app/: api.service.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  chat.service.ts
ui/src/app/chat-area/: chat-area.component.html  chat-area.component.ts
ui/src/app/message-input/: message-input.component.html  message-input.component.scss  message-input.component.ts
ui/src/app/sidebar/: sidebar.component.html
